Create an outcome per path for Maldives
The goal of this story is to migrate the flow for Maldives to use
the outcome per path strategy.

Within, flat content have been introduced for Maldives. The flat
content will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -320,6 +320,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/uk/partner_
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/uk/partner_local/_same_sex.erb: d071a7e93056c2aa5837f22e6712fa38
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/uk/partner_other/_opposite_sex.erb: a00087652cf25f6b0cdf40bc1d180447
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/uk/partner_other/_same_sex.erb: d071a7e93056c2aa5837f22e6712fa38
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/_title.govspeak.erb: 00274dd1f2ee56ab2baacc0d9eef0372
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 33ce3c3de5a203e213104b1d4fa2b6a0
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/ceremony_country/partner_british/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/ceremony_country/partner_local/_opposite_sex.govspeak.erb: bb06f502582c6b050f5d94eeb7514ce8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/ceremony_country/partner_local/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/ceremony_country/partner_other/_opposite_sex.govspeak.erb: bb06f502582c6b050f5d94eeb7514ce8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/ceremony_country/partner_other/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/third_country/partner_british/_opposite_sex.govspeak.erb: b074e57765bde907dd39368721bf29b6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/third_country/partner_british/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/third_country/partner_local/_opposite_sex.govspeak.erb: 78d56d9c4d27ce4a6731e3518a2dce68
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/third_country/partner_local/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/third_country/partner_other/_opposite_sex.govspeak.erb: 78d56d9c4d27ce4a6731e3518a2dce68
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/third_country/partner_other/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_british/_opposite_sex.govspeak.erb: 7586f9556f18e385e7cf1fa3cb101f91
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_british/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_local/_opposite_sex.govspeak.erb: cba6107081af3fcb5df145e6a652147a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_local/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_other/_opposite_sex.govspeak.erb: cba6107081af3fcb5df145e6a652147a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_other/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/_title.govspeak.erb: 02dfe62310d38985f5b8c0330cee5b29
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 394c92edfaacdac9a6220322cc21eec9
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_same_sex.govspeak.erb: aee27299ffc25ae3d29a71bb8f07bb01
