--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -390,6 +390,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_lo
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_local/_same_sex.govspeak.erb: bc358a923fd8c8e4eff4ba3198f23121
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_other/_opposite_sex.govspeak.erb: bc358a923fd8c8e4eff4ba3198f23121
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/portugal/uk/partner_other/_same_sex.govspeak.erb: bc358a923fd8c8e4eff4ba3198f23121
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/_title.govspeak.erb: 19aa62ca0810575f9caf262b0636f157
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 4b4c51e956e64189e1d47c9860e7b625
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_british/_same_sex.govspeak.erb: b65931b20b7bb16ae2fd15aa85a2dc2d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 488e7a3155e46c78f26bfe9b6bfaa54d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_local/_same_sex.govspeak.erb: cc1befc599796465583b0f9c5acec757
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 488e7a3155e46c78f26bfe9b6bfaa54d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_other/_same_sex.govspeak.erb: 6bbc3f9c56a3b27ead1c4ef9591c4976
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/third_country/partner_british/_opposite_sex.govspeak.erb: cf1a2238c3d5197f6be1b3f818741ed7
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/third_country/partner_british/_same_sex.govspeak.erb: b65931b20b7bb16ae2fd15aa85a2dc2d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/third_country/partner_local/_opposite_sex.govspeak.erb: 549d5e8f3175b0deea89eadedae69f4f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/third_country/partner_local/_same_sex.govspeak.erb: cc1befc599796465583b0f9c5acec757
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/third_country/partner_other/_opposite_sex.govspeak.erb: 91080ae008642bbaa1cf14021d3ae514
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/third_country/partner_other/_same_sex.govspeak.erb: 6bbc3f9c56a3b27ead1c4ef9591c4976
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_british/_opposite_sex.govspeak.erb: f5182ba824645f6caae273ba6ec1b6ba
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_british/_same_sex.govspeak.erb: b65931b20b7bb16ae2fd15aa85a2dc2d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_local/_opposite_sex.govspeak.erb: 78116633bf90f8f18b52c841d1936f9d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_local/_same_sex.govspeak.erb: cc1befc599796465583b0f9c5acec757
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_other/_opposite_sex.govspeak.erb: 78116633bf90f8f18b52c841d1936f9d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_other/_same_sex.govspeak.erb: 6bbc3f9c56a3b27ead1c4ef9591c4976
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/_title.govspeak.erb: c8e789a1f94b45efe48e6b8e2f60f5f8
 ? lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/ceremony_country/partner_british/_opposite_sex.govspeak.erb
 : 1bfb822d8c42ba74ec3c13bd8e381702
