Create an outcome per path for Burma
The goal of this story is to migrate the flow for Burma to
use the outcome per path strategy.

Within, flat content have been introduced for Burma. The flat content
will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -99,6 +99,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_loca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_local/_same_sex.erb: 4c8e1d8f87677b82e3e7db5544f00b04
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_other/_opposite_sex.erb: 403c8d52e332dff40902453f37c03de6
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_other/_same_sex.erb: 4c8e1d8f87677b82e3e7db5544f00b04
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/_title.govspeak.erb: 9ff4426d88d9eb6499d31a01426e5b2d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 8352579f14bf691bf1519834ff16453c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_british/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 7b3823b07a4813d7745fe0174566d578
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_local/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 8352579f14bf691bf1519834ff16453c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_other/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/third_country/partner_british/_opposite_sex.govspeak.erb: 8352579f14bf691bf1519834ff16453c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/third_country/partner_british/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/third_country/partner_local/_opposite_sex.govspeak.erb: 7b3823b07a4813d7745fe0174566d578
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/third_country/partner_local/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/third_country/partner_other/_opposite_sex.govspeak.erb: 8352579f14bf691bf1519834ff16453c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/third_country/partner_other/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/uk/partner_british/_opposite_sex.govspeak.erb: 8352579f14bf691bf1519834ff16453c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/uk/partner_british/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/uk/partner_local/_opposite_sex.govspeak.erb: 7b3823b07a4813d7745fe0174566d578
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/uk/partner_local/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/uk/partner_other/_opposite_sex.govspeak.erb: 8352579f14bf691bf1519834ff16453c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/uk/partner_other/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/_title.govspeak.erb: cd0916ae860ff1ebf2726dd135907dcc
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_british/_opposite_sex.govspeak.erb: e0bd89050cc31b5b010f07f6c6bec9cf
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_british/_same_sex.govspeak.erb: d2f9a087b393386c1d81733284e5d6b8
