Create an outcome per path for Brazil
The goal of this story is to migrate the flow for Brazil to
use the outcome per path strategy.

Within, flat content have been introduced for Brazil. The flat content
will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -80,6 +80,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/_you_dont_need_to_stay_in_countr
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_have_been_divorced_or_widowed.govspeak.erb: e719af472a3ec2c26a9e4ce7202c11ff
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_be_asked_for_cni.govspeak.erb: cd1226b515c6a1723da99be2cb207c51
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_have_to_wait_to_get_married.govspeak.erb: e32774b08379258450d2d2198c0dbc49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/_title.govspeak.erb: 22a1ac72bdd791b94d281a180dbe7206
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_british/_opposite_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_british/_same_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_local/_opposite_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_local/_same_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_other/_opposite_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_other/_same_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_british/_opposite_sex.erb: f7e8d692a6e490efd62d81f98b7a4fe3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_british/_same_sex.erb: f7e8d692a6e490efd62d81f98b7a4fe3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_local/_opposite_sex.erb: f7e8d692a6e490efd62d81f98b7a4fe3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_local/_same_sex.erb: f7e8d692a6e490efd62d81f98b7a4fe3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_other/_opposite_sex.erb: f7e8d692a6e490efd62d81f98b7a4fe3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/third_country/partner_other/_same_sex.erb: f7e8d692a6e490efd62d81f98b7a4fe3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_british/_opposite_sex.erb: c665d53130ef85ab5effac31d01db97b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_british/_same_sex.erb: 9fcc5259889766d4f0d45f288d242660
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_local/_opposite_sex.erb: 403c8d52e332dff40902453f37c03de6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_local/_same_sex.erb: 4c8e1d8f87677b82e3e7db5544f00b04
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_other/_opposite_sex.erb: 403c8d52e332dff40902453f37c03de6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_other/_same_sex.erb: 4c8e1d8f87677b82e3e7db5544f00b04
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/_title.govspeak.erb: cd0916ae860ff1ebf2726dd135907dcc
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_british/_opposite_sex.govspeak.erb: e0bd89050cc31b5b010f07f6c6bec9cf
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/ceremony_country/partner_british/_same_sex.govspeak.erb: d2f9a087b393386c1d81733284e5d6b8
