Create an outcome per path for Azerbaijan
The goal of this story is to migrate the flow for Azerbaijan to
use the outcome per path strategy.

Within, flat content have been introduced for Azerbaijan. The flat content
will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -80,6 +80,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/_you_dont_need_to_stay_in_countr
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_have_been_divorced_or_widowed.govspeak.erb: e719af472a3ec2c26a9e4ce7202c11ff
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_be_asked_for_cni.govspeak.erb: cd1226b515c6a1723da99be2cb207c51
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_have_to_wait_to_get_married.govspeak.erb: e32774b08379258450d2d2198c0dbc49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/_title.govspeak.erb: 78d1dc92913316a6804b14e892246c76
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_british/_opposite_sex.erb: 914ca41ec46f27c3ba292a3470633d24
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_british/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_local/_opposite_sex.erb: 1112295aea27ad1e5f40c352c9d752f5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_local/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_other/_opposite_sex.erb: 1112295aea27ad1e5f40c352c9d752f5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_other/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/third_country/partner_british/_opposite_sex.erb: 72cd5bbfb265afabc263409fa0dadb4a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/third_country/partner_british/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/third_country/partner_local/_opposite_sex.erb: 86508460f1a1f815749c44d69c05250b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/third_country/partner_local/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/third_country/partner_other/_opposite_sex.erb: 921ee85cc78f8ebb489fe11ec18e0aa1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/third_country/partner_other/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_british/_opposite_sex.erb: 5a1be9c6dd948313a25e0f4446ccc851
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_british/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_local/_opposite_sex.erb: 06b8f84ad1d2ae2cdfe7033595167deb
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_local/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_other/_opposite_sex.erb: 06b8f84ad1d2ae2cdfe7033595167deb
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_other/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/_title.govspeak.erb: 22a1ac72bdd791b94d281a180dbe7206
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_british/_opposite_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/ceremony_country/partner_british/_same_sex.erb: efacd6c4baf4bc062a8a07dfdff194fe
