Create an outcome per path for El Salvador
The goal of this commit is to migrate the flow for El Salvador to use
the outcome per path strategy.

Within, flat content have been introduced for El Salvador. The flat
content will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -219,6 +219,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_local
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_local/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_other/_opposite_sex.govspeak.erb: f0f36315755e0359c2a5796dc26e069f
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/egypt/uk/partner_other/_same_sex.govspeak.erb: 6cd2d3e2fdc4c164ddc7cfbf34dea6b9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/_title.govspeak.erb: 0738b7a2b3ce98b2fca6b731b03f9fa3
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_british/_opposite_sex.erb: 8050ca1fde582023db51137190d370c2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_british/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_local/_opposite_sex.erb: 549e095791699b8de5ad8d78f0059666
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_local/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_other/_opposite_sex.erb: 549e095791699b8de5ad8d78f0059666
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_other/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/third_country/partner_british/_opposite_sex.erb: fb2b770cff1c977457539da708473b07
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/third_country/partner_british/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/third_country/partner_local/_opposite_sex.erb: c032cc5aff3dbc7cccb0dfc605f2f3d1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/third_country/partner_local/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/third_country/partner_other/_opposite_sex.erb: 57771201b882e28df37dc4da1bf70f0a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/third_country/partner_other/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_british/_opposite_sex.erb: a51eb15a772f7d3e2e858331cefb27a6
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_british/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_local/_opposite_sex.erb: 95af8569ecb80d591ebe40d7d19970ed
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_local/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_other/_opposite_sex.erb: 95af8569ecb80d591ebe40d7d19970ed
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_other/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_opposite_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_same_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_title.govspeak.erb: 89e48e72170d1df47f28b434ae630ecf
