--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -418,6 +418,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_lo
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_local/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_other/_opposite_sex.govspeak.erb: a044da2051ed34e628a3557db9cdb14d
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/maldives/uk/partner_other/_same_sex.govspeak.erb: e5a8b1a60f0b52a030451162acafd64a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/_title.govspeak.erb: d346bf69a68348f08e60528c92d5c1ab
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/ceremony_country/partner_british/_opposite_sex.erb: ace98b86713fdc60cdc042e037754ef2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/ceremony_country/partner_british/_same_sex.erb: 4b85ae610ae1e32e2c697ca67b6d441f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/ceremony_country/partner_local/_opposite_sex.erb: 59628e4a2c5b9c432f3c584baed0fa24
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/ceremony_country/partner_local/_same_sex.erb: 62c27b887faf99e81578464b85836431
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/ceremony_country/partner_other/_opposite_sex.erb: 59628e4a2c5b9c432f3c584baed0fa24
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/ceremony_country/partner_other/_same_sex.erb: 62c27b887faf99e81578464b85836431
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_british/_opposite_sex.erb: b40b18fdf4cc791b50aa743d1e8832e0
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_british/_same_sex.erb: 4b85ae610ae1e32e2c697ca67b6d441f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_local/_opposite_sex.erb: f596318b21703b163c9f3b00d2bde65a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_local/_same_sex.erb: 62c27b887faf99e81578464b85836431
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_other/_opposite_sex.erb: 0657f36f0b617be2199956b573cdf496
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/third_country/partner_other/_same_sex.erb: 62c27b887faf99e81578464b85836431
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/uk/partner_british/_opposite_sex.erb: eb2cd2b06ac4b212793bba5ec33279e0
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/uk/partner_british/_same_sex.erb: 4b85ae610ae1e32e2c697ca67b6d441f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/uk/partner_local/_opposite_sex.erb: 60876c5e5cb1ddb8d037857dcb3b0981
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/uk/partner_local/_same_sex.erb: 62c27b887faf99e81578464b85836431
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/uk/partner_other/_opposite_sex.erb: 60876c5e5cb1ddb8d037857dcb3b0981
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/moldova/uk/partner_other/_same_sex.erb: 62c27b887faf99e81578464b85836431
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/_title.govspeak.erb: 02dfe62310d38985f5b8c0330cee5b29
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 394c92edfaacdac9a6220322cc21eec9
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/ceremony_country/partner_british/_same_sex.govspeak.erb: aee27299ffc25ae3d29a71bb8f07bb01
