Templates for British Indian Ocean Territory
The goal of this commit is to migrate the flow for British Indian
Ocean Territory to use the outcome per path strategy.

Within, flat content have been introduced for British Indian Ocean
Territory. The flat content will be linked and form part of the outcome
per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -137,6 +137,37 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_loca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_local/_same_sex.erb: 4c8e1d8f87677b82e3e7db5544f00b04
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_other/_opposite_sex.erb: 403c8d52e332dff40902453f37c03de6
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/brazil/uk/partner_other/_same_sex.erb: 4c8e1d8f87677b82e3e7db5544f00b04
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/_title.govspeak.erb: cf7b200aed414ba15d5ee6a772671542
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_british/_opposite_sex.erb
+: 4da738c98858fdb4e2b65eea86c0b354
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_british/_same_sex.erb
+: dcdaa0c06be4c721929245659e631ae4
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_local/_opposite_sex.erb
+: 4da738c98858fdb4e2b65eea86c0b354
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_local/_same_sex.erb
+: dcdaa0c06be4c721929245659e631ae4
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_other/_opposite_sex.erb
+: 4da738c98858fdb4e2b65eea86c0b354
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_other/_same_sex.erb
+: dcdaa0c06be4c721929245659e631ae4
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/third_country/partner_british/_opposite_sex.erb
+: 4da738c98858fdb4e2b65eea86c0b354
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/third_country/partner_british/_same_sex.erb
+: dcdaa0c06be4c721929245659e631ae4
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/third_country/partner_local/_opposite_sex.erb
+: 4da738c98858fdb4e2b65eea86c0b354
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/third_country/partner_local/_same_sex.erb
+: dcdaa0c06be4c721929245659e631ae4
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/third_country/partner_other/_opposite_sex.erb
+: 4da738c98858fdb4e2b65eea86c0b354
+? lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/third_country/partner_other/_same_sex.erb
+: dcdaa0c06be4c721929245659e631ae4
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_british/_opposite_sex.erb: 4da738c98858fdb4e2b65eea86c0b354
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_british/_same_sex.erb: dcdaa0c06be4c721929245659e631ae4
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_local/_opposite_sex.erb: 4da738c98858fdb4e2b65eea86c0b354
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_local/_same_sex.erb: dcdaa0c06be4c721929245659e631ae4
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_other/_opposite_sex.erb: 4da738c98858fdb4e2b65eea86c0b354
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_other/_same_sex.erb: dcdaa0c06be4c721929245659e631ae4
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/_title.govspeak.erb: 9ff4426d88d9eb6499d31a01426e5b2d
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 8e57e8a62f0dc32258488dde470a00a3
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/burma/ceremony_country/partner_british/_same_sex.govspeak.erb: 35dd46092edac40f92caaa9c6627193d
