British Indian Ocean flow to use outcome per path
Change the flow for the British Indian Ocean Territory in
marriage-abroad to use the new outcome per path templates.

Modify existing British Indian Ocean Territory integration tests.

No test artefacts were affected by this change.

--- a/lib/data/marriage_abroad_data.yml
+++ b/lib/data/marriage_abroad_data.yml
@@ -3,6 +3,7 @@ countries_with_18_outcomes:
   - algeria
   - azerbaijan
   - brazil
+  - british-indian-ocean-territory
   - burma
   - chile
   - colombia
