Create an outcome per path for Algeria
The goal of this commit is to migrate the flow for Algeria to use
the outcome per path strategy.

Within, flat content have been introduced for Algeria. The flat
content will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -80,6 +80,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/_you_dont_need_to_stay_in_countr
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_have_been_divorced_or_widowed.govspeak.erb: e719af472a3ec2c26a9e4ce7202c11ff
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_be_asked_for_cni.govspeak.erb: cd1226b515c6a1723da99be2cb207c51
 lib/smart_answer_flows/marriage-abroad/outcomes/_you_will_have_to_wait_to_get_married.govspeak.erb: e32774b08379258450d2d2198c0dbc49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/_title.govspeak.erb: e8edb9db619edb969ef3cdb18d40c167
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/ceremony_country/partner_british/_opposite_sex.erb: f2e04f760db58898593d84c1a193e075
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/ceremony_country/partner_british/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/ceremony_country/partner_local/_opposite_sex.erb: e82c9c66a478379bb741ce73a0db633a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/ceremony_country/partner_local/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/ceremony_country/partner_other/_opposite_sex.erb: e82c9c66a478379bb741ce73a0db633a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/ceremony_country/partner_other/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/third_country/partner_british/_opposite_sex.erb: 7b78031f821263727066f17bb9d2aa4d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/third_country/partner_british/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/third_country/partner_local/_opposite_sex.erb: 807e1ade38d964ac944211c5cd680107
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/third_country/partner_local/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/third_country/partner_other/_opposite_sex.erb: 3b02e1e2f21e503bf4bc2c9e7fe361db
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/third_country/partner_other/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_british/_opposite_sex.erb: 380dda27cd5a818b454a79ccdb0485d9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_british/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_local/_opposite_sex.erb: 3a727df0baee3022cc987bed0e7f160a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_local/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_other/_opposite_sex.erb: 3a727df0baee3022cc987bed0e7f160a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/algeria/uk/partner_other/_same_sex.erb: 012aa5bd3ce9dce24c79aed0505c605f
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/_title.govspeak.erb: 78d1dc92913316a6804b14e892246c76
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_british/_opposite_sex.erb: 914ca41ec46f27c3ba292a3470633d24
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/ceremony_country/partner_british/_same_sex.erb: 36d76c82441dae638cb75d47a03e6778
