--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -1,5 +1,5 @@
 ---
-lib/data/marriage_abroad_data.yml: 1dbc0de7e399822f6fab2a1e89de8236
+lib/data/marriage_abroad_data.yml: ed3ee1230ca1cdfc5f4bff27536dc21b
 lib/data/marriage_abroad_services.yml: 40598840da892562da37f79c36b3208e
 lib/data/rates/marriage_abroad_consular_fees.yml: 20afc9d15de06e0a199761433b055d9f
 lib/smart_answer/calculators/country_name_formatter.rb: 6e9aab3c79a59e54e056b473b9cc4151
@@ -452,6 +452,8 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_loca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_local/_same_sex.govspeak.erb: cc481d56f4ceed1fbe7f52b001ed86e6
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_opposite_sex.govspeak.erb: 13a2434ff467168a471218b9279b95eb
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/uk/partner_other/_same_sex.govspeak.erb: f14a355018bfe4bafc0dd56ccf6d6abb
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_opposite_sex.erb: 44dabd60b213702f714ef9b7606dacca
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_same_sex.erb: 6f00189af788677dd4774aebd43bb123
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/_title.govspeak.erb: 92dcede7d7b6f5b0f7f6972b18d72e28
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/ceremony_country/partner_british/_opposite_sex.erb: 44dabd60b213702f714ef9b7606dacca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/luxembourg/ceremony_country/partner_british/_same_sex.erb: 6f00189af788677dd4774aebd43bb123
@@ -778,4 +780,4 @@ lib/smart_answer_flows/marriage-abroad/questions/what_is_your_partners_nationali
 lib/smart_answer_flows/marriage-abroad.rb: 9e4136918406da1c78444e0b3b4cfdfa
 lib/smart_answer_flows/shared/_overseas_passports_embassies.govspeak.erb: 1dc349abcd6b21e1bf8c397d96fd02b8
 test/data/marriage-abroad-questions-and-responses.yml: 0f079512ee2f1fd27145bf9db84ef5eb
-test/data/marriage-abroad-responses-and-expected-results.yml: 17d4154cca4bf787b87b6f7c229ad584
+test/data/marriage-abroad-responses-and-expected-results.yml: 1a33f068e5c86dd6e0c913f195186294
