Question 13: Regenerate test artefacts
This commit contains regression test artefacts that show what has
changed following the replacement of Yes/No options with the benefit
list.

The question 13 options have also been updated the the benefits list
and the expected results have been generated to reflect the possible
flows that a user could take

--- a/test/data/uk-benefits-abroad-questions-and-responses.yml
+++ b/test/data/uk-benefits-abroad-questions-and-responses.yml
@@ -31,8 +31,14 @@
 - 'yes'
 - 'no'
 :do_either_of_the_following_apply?:
-- 'yes'
-- 'no'
+- bereavement_benefits
+- severe_disablement_allowance
+- employment_and_support_allowance
+- incapacity_benefit
+- industrial_injuries_disablement_benefit
+- state_pension
+- incapacity_benefit,state_pension,bereavement_benefits
+- none
 :working_for_uk_employer_ssp?:
 - 'yes'
 - 'no'
